js big refactor, most of the function calling hacks are gone proper handling of [this] and calling a function with a context object a new functional interface called JsCallable solves this very elegantly next we will refactor the event listening using Event.Listener etc